--- a/packages/bookmark/src/index.html
+++ b/packages/bookmark/src/index.html
@@ -5,48 +5,48 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
 <style>
   * {
-      padding: 0;
-      margin: 0;
+    padding: 0;
+    margin: 0;
   }
 
   body {
-      padding: 2em;
+    padding: 2em;
   }
 
   dl>dt:not(:has(h3[personal_toolbar_folder="true"])) {
-      margin-left: 1.25em;
-      padding: .25em 0;
+    margin-left: 1.25em;
+    padding: .25em 0;
   }
 
   dt>h3 {
-      padding-bottom: .25em;
+    padding-bottom: .25em;
   }
 
   a {
-      text-decoration: none;
+    text-decoration: none;
   }
-  
+
   i {
-      display: inline-block;
-      width: 1.1em;
-      height: 1.1em;
-      margin-right: .25em;
-      vertical-align: middle;
+    display: inline-block;
+    width: 1.1em;
+    height: 1.1em;
+    margin-right: .25em;
+    vertical-align: middle;
   }
 </style>
-<TITLE>Bookmark Script</TITLE>
-<H1>Bookmark Script</H1>
+<TITLE>Bookmarklet</TITLE>
+<H1>Bookmarklet</H1>
 [[bookmark]]
 <script>
   const links = document.querySelectorAll("dt > a");
   const h3s = document.querySelectorAll("dt > h3");
   links.forEach((element) => {
-      const i = document.createElement("i");
-      const icon = element.getAttribute("icon")?.trim();
-      if (icon) {
-          i.style.background = `url(${icon}) no-repeat 0 0 / cover`;
-      }
-      element.setAttribute("selected", true)
-      element.prepend(i);
+    const i = document.createElement("i");
+    const icon = element.getAttribute("icon")?.trim();
+    if (icon) {
+      i.style.background = `url(${icon}) no-repeat 0 0 / cover`;
+    }
+    element.setAttribute("selected", true)
+    element.prepend(i);
   });
 </script>
