--- a/packages/bookmark/src/index.html
+++ b/packages/bookmark/src/index.html
@@ -34,8 +34,8 @@
     vertical-align: middle;
   }
 </style>
-<TITLE>Bookmarklet</TITLE>
-<H1>Bookmarklet</H1>
+<TITLE>Bookmark</TITLE>
+<H1>Bookmark</H1>
 [[bookmark]]
 <script>
   const links = document.querySelectorAll("dt > a");
